# BakeForge

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.zed/: settings.json  tasks.json
doc/: README.md  deferred-rendering.md  object-picking.md  scene-graph.md
res/: cubeBakeTest.glb
src/: FSQuad.cpp  FSQuad.hpp  appConfig.cpp  appConfig.hpp  baker.cpp  baker.hpp  bakerNode.cpp  bakerNode.hpp  bvhBuilder.cpp  bvhBuilder.hpp  bvhNode.hpp  camera.cpp  camera.hpp  dxDevice.cpp  dxDevice.hpp  gltfImporter.cpp  gltfImporter.hpp  inputEventsHandler.cpp  inputEventsHandler.hpp  light.cpp  light.hpp  main.cpp  material.cpp  material.hpp  primitive.cpp  primitive.hpp  primitiveData.hpp  renderer.cpp  renderer.hpp  rtvCollector.cpp  rtvCollector.hpp  scene.cpp  scene.hpp  sceneManager.cpp  sceneManager.hpp  sceneNode.cpp  sceneNode.hpp  sceneNodeHandle.hpp  shaderInfo.hpp  shaderManager.cpp  (+11 more)
src/commands/: _SUMMARY.md  commandBase.hpp  commandGroup.cpp  commandGroup.hpp  commandManager.cpp  commandManager.hpp  nodeCommand.cpp  nodeCommand.hpp  nodeSnapshot.cpp  nodeSnapshot.hpp  normalBakerCommand.cpp  normalBakerCommand.hpp  scopedTransaction.cpp  scopedTransaction.hpp  snapshotBase.hpp  uiCommand.cpp  uiCommand.hpp
src/passes/: DebugBVHPass.cpp  DebugBVHPass.hpp  FSQuad.cpp  FSQuad.hpp  GBuffer.cpp  GBuffer.hpp  GBufferTextures.hpp  ZPrePass.cpp  ZPrePass.hpp  bakerPass.cpp  bakerPass.hpp  basePass.cpp  basePass.hpp  bvhDebugPass.cpp  bvhDebugPass.hpp  debugPassMacros.hpp  deferedPass.cpp  deferedPass.hpp  objectPicker.cpp  objectPicker.hpp  pbrCubeMapPass.cpp  pbrCubeMapPass.hpp  previewGenerator.cpp  previewGenerator.hpp  rayTracePass.cpp  rayTracePass.hpp  textureHistory.cpp  textureHistory.hpp  wordSpaceUIPass.cpp  wordSpaceUIPass.hpp
src/shaders/: BRDF.hlsl  LUT4BRDF.hlsl  ZPrePass.hlsl  baker.hlsl  bvh.hlsl  colorPicker.hlsl  constants.hlsl  cubemap.hlsl  debugBVH.hlsl  deferred.hlsl  equirectToCubemp.hlsl  gBuffer.hlsl  irradianceConvolution.hlsl  main.hlsl  prefilteredMap.hlsl  previewGenerator.hlsl  rayDirectionBlendPainter.hlsl  rayTrace.hlsl  raycastDebug.hlsl  textureHistoryDifference.hlsl  toFSQuad.hlsl  uvRasterize.hlsl  wordSpaceUI.hlsl
src/utility/: SelectionHelpers.cpp  SelectionHelpers.hpp  rdocHelpers.cpp  rdocHelpers.hpp  stringUnorderedMap.hpp
